vpc/main.tf
# Production VPC
resource "aws_vpc" "production-vpc" {
  cidr_block           = "10.0.0.0/16"
  enable_dns_support   = true
  enable_dns_hostnames = true
  tags = {Name = "rajdeep_vpc"}
}

resource "aws_subnet" "public-subnet" {
  count = length(var.public_subnet_cidr)
  cidr_block        = var.public_subnet_cidr[count.index]
  vpc_id            = aws_vpc.production-vpc.id
  availability_zone = var.availability_zones[count.index]
  tags = {
    Name = "public${count.index}"
  }
}

resource "aws_subnet" "private-subnet" {
  count = length(var.private_subnet_cidr)
  cidr_block        = var.private_subnet_cidr[count.index]
  vpc_id            = aws_vpc.production-vpc.id
  availability_zone = var.availability_zones[count.index]
  tags = {
    Name = "private${count.index}"
  }
}

# Create route tables
resource "aws_route_table" "public-route-table" {
  vpc_id = aws_vpc.production-vpc.id
}
resource "aws_route_table" "private-route-table" {
  vpc_id = aws_vpc.production-vpc.id
}

# Associate route tables with subnets
# Associate the newly created route tables to the subnets
resource "aws_route_table_association" "public-route-association" {
  count = length(var.public_subnet_cidr)
  route_table_id = aws_route_table.public-route-table.id
  subnet_id      = aws_subnet.public-subnet[count.index].id
}
resource "aws_route_table_association" "private-route-1-association" {
  count = length(var.private_subnet_cidr)
  route_table_id = aws_route_table.private-route-table.id
  subnet_id      = aws_subnet.private-subnet[count.index].id
}

# Internet Gateway for the public subnet
resource "aws_internet_gateway" "production-igw" {
  vpc_id = aws_vpc.production-vpc.id
}
# Elastic IP
resource "aws_eip" "elastic-ip-for-nat-gw" {
  vpc                       = true
  associate_with_private_ip = "10.0.0.5"
  depends_on                = [aws_internet_gateway.production-igw]
}

# NAT gateway
resource "aws_nat_gateway" "nat-gw" {
  allocation_id = aws_eip.elastic-ip-for-nat-gw.id
  subnet_id     = aws_subnet.public-subnet[0].id
  depends_on    = [aws_eip.elastic-ip-for-nat-gw]
}

resource "aws_route" "nat-gw-route" {
  route_table_id         = aws_route_table.private-route-table.id
  nat_gateway_id         = aws_nat_gateway.nat-gw.id
  destination_cidr_block = "0.0.0.0/0"
}

resource "aws_route" "public-internet-igw-route" {
  route_table_id         = aws_route_table.public-route-table.id
  gateway_id             = aws_internet_gateway.production-igw.id
  destination_cidr_block = "0.0.0.0/0"
}
